--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.Droid/LagoVista.XPlat.Sample.Droid.csproj
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.Droid/LagoVista.XPlat.Sample.Droid.csproj
@@ -111,22 +111,22 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="LagoVista.Core.Authentication">
-      <Version>2.1.439-beta1607</Version>
+      <Version>2.1.656-beta1121</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.Networking">
-      <Version>2.1.439-beta1607</Version>
+      <Version>2.1.656-beta1121</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.IoT.Logging">
-      <Version>2.1.439-beta1607</Version>
+      <Version>2.1.656-beta1121</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.UserAdmin.Models">
-      <Version>2.1.439-beta1607</Version>
+      <Version>2.1.656-beta1121</Version>
     </PackageReference>
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe">
       <Version>4.4.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms">
-      <Version>3.1.0.697729</Version>
+      <Version>3.6.0.220655</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
@@ -173,6 +173,12 @@
       <Project>{22e077f4-28b1-46e3-b624-361b6d2a9d4f}</Project>
       <Name>LagoVista.XPlat.Sample</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\companylogo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\applogo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
