--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.UWP/LagoVista.XPlat.Sample.UWP.csproj
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.UWP/LagoVista.XPlat.Sample.UWP.csproj
@@ -90,6 +90,7 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
+    <Content Include="Assets\applogo.png" />
     <Content Include="Assets\Fonts\iconize-entypoplus.ttf" />
     <Content Include="Assets\Fonts\iconize-fontawesome.ttf" />
     <Content Include="Assets\Fonts\iconize-ionicons.ttf" />
@@ -136,6 +137,7 @@
   <ItemGroup>
     <Content Include="Assets\nuviot.png" />
     <Content Include="Assets\slsys.png" />
+    <Content Include="Assets\companylogo.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-100.png" />
     <Content Include="Assets\LockScreenLogo.scale-125.png" />
