--- a/Package.nuspec
+++ b/Package.nuspec
@@ -2,19 +2,19 @@
 <package>
   <metadata>
     <id>LagoVista.XPlat</id>
-    <version>1.2.660-alpha1031</version>
+    <version>1.2.661-alpha0851</version>
     <authors>Software Logistics, LLC</authors>
     <owners>Software Logistics, LLC</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <projectUrl>http://github.com/LagoVista</projectUrl>
     <iconUrl>http://bytemaster.blob.core.windows.net/icons/LagoVistaIcon.png</iconUrl>
     <description>Core Mobile Client Functionality for the LagoVista Devices, IoT and Home Automation Frameworks</description>
-    <releaseNotes>Pre-release Software</releaseNotes>
-    <copyright>Copyright 2017</copyright>
+    <releaseNotes>Release Candidate Software</releaseNotes>
+    <copyright>Copyright 2019</copyright>
     <tags>HomeAutomation IoT LagoVista</tags>
     <dependencies>
-      <dependency id="Newtonsoft.Json" version="10.0.1" />
-      <dependency id="Xamarin.Forms" version="3.1.0.637273" />
+      <dependency id="Newtonsoft.Json" version="12.0.1" />
+      <dependency id="Xamarin.Forms" version="3.6.0.220655" />
     </dependencies>
   </metadata>
   <files>
@@ -29,7 +29,7 @@
     <file src="src\LagoVista.XPlat.Core\bin\release\netstandard2.0\LagoVista.XPlat.Core.dll" target="ref\uap10.0" />
     <file src="src\LagoVista.XPlat.Core\bin\release\netstandard2.0\LagoVista.XPlat.Core.dll" target="runtimes\win10-arm\lib\uap10.0" />
     <file src="src\LagoVista.XPlat.Core\bin\release\netstandard2.0\LagoVista.XPlat.Core.dll" target="runtimes\win10-x64\lib\uap10.0" />
-    <file src="src\LagoVista.XPlat.Core\bin\release\netstandard1.3\LagoVista.XPlat.Core.dll" target="runtimes\win10-x86\lib\uap10.0" />
+    <file src="src\LagoVista.XPlat.Core\bin\release\netstandard2.0\LagoVista.XPlat.Core.dll" target="runtimes\win10-x86\lib\uap10.0" />
     <file src="src\LagoVista.XPlat.UWP\bin\ARM\Release\LagoVista.XPlat.UWP.dll" target="runtimes\win10-arm\lib\uap10.0" />
     <file src="src\LagoVista.XPlat.UWP\bin\ARM\Release\LagoVista.XPlat.UWP.pri" target="runtimes\win10-arm\lib\uap10.0" />
     <file src="src\LagoVista.XPlat.UWP\bin\x64\Release\LagoVista.XPlat.UWP.dll" target="runtimes\win10-x64\lib\uap10.0" />
