--- a/src/LagoVista.Core.UWP/LagoVista.Core.UWP.csproj
+++ b/src/LagoVista.Core.UWP/LagoVista.Core.UWP.csproj
@@ -212,6 +212,7 @@
     <Compile Include="Networking\WiredNetworks.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\BindingHelper.cs" />
+    <Compile Include="Services\ClipBoard.cs" />
     <Compile Include="Services\DeviceManager.cs" />
     <Compile Include="Services\DirectoryServices.cs" />
     <Compile Include="Services\RestMessageHandler.cs" />
@@ -247,19 +248,19 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="LagoVista.Core">
-      <Version>2.1.707-beta1639</Version>
+      <Version>2.1.713-beta1441</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.Authentication">
-      <Version>2.1.707-beta1639</Version>
+      <Version>2.1.713-beta1441</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.Networking">
-      <Version>2.1.707-beta1639</Version>
+      <Version>2.1.713-beta1441</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.IoT.Logging">
-      <Version>2.1.707-beta1639</Version>
+      <Version>2.1.713-beta1441</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.UserAdmin.Models">
-      <Version>2.1.707-beta1639</Version>
+      <Version>2.1.713-beta1441</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.8</Version>
