--- a/src/LagoVista.XPlat.iOS/packages.config
+++ b/src/LagoVista.XPlat.iOS/packages.config
@@ -1,21 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="LagoVista.Core" version="2.1.740-beta0913" targetFramework="xamarinios10" />
-  <package id="LagoVista.Core.Authentication" version="2.1.740-beta0913" targetFramework="xamarinios10" />
-  <package id="LagoVista.Core.Networking" version="2.1.740-beta0913" targetFramework="xamarinios10" />
-  <package id="LagoVista.IoT.Logging" version="2.1.740-beta0913" targetFramework="xamarinios10" />
-  <package id="LagoVista.UserAdmin.Models" version="2.1.740-beta0913" targetFramework="xamarinios10" />
-  <package id="Microsoft.AppCenter" version="2.0.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.AppCenter.Analytics" version="2.0.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.AppCenter.Crashes" version="2.0.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.AppCenter.Distribute" version="2.0.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.AppCenter.Push" version="2.0.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.NETCore.Platforms" version="2.2.1" targetFramework="xamarinios10" />
+  <package id="LagoVista.Core" version="2.1.907-beta0754" targetFramework="xamarinios10" />
+  <package id="LagoVista.Core.Authentication" version="2.1.907-beta0754" targetFramework="xamarinios10" />
+  <package id="LagoVista.Core.Networking" version="2.1.907-beta0754" targetFramework="xamarinios10" />
+  <package id="LagoVista.IoT.Logging" version="2.1.906-beta0929" targetFramework="xamarinios10" />
+  <package id="LagoVista.UserAdmin.Models" version="2.1.906-beta0929" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter" version="2.5.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter.Analytics" version="2.5.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter.Crashes" version="2.5.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter.Distribute" version="2.5.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter.Push" version="2.5.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.CSharp" version="4.7.0-preview2.19523.17" targetFramework="xamarinios10" />
+  <package id="Microsoft.NETCore.Platforms" version="3.1.0-preview2.19523.17" targetFramework="xamarinios10" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="xamarinios10" />
-  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="xamarinios10" />
-  <package id="Square.SocketRocket" version="0.5.1" targetFramework="xamarinios10" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="xamarinios10" />
+  <package id="Square.SocketRocket" version="0.5.1.1" targetFramework="xamarinios10" />
   <package id="System.AppContext" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="xamarinios10" />
@@ -64,5 +64,5 @@
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="xamarinios10" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="4.0.0.425677" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="4.2.0.778463" targetFramework="xamarinios10" />
 </packages>
