--- a/src/LagoVista.Core.UWP/LagoVista.Core.UWP.csproj
+++ b/src/LagoVista.Core.UWP/LagoVista.Core.UWP.csproj
@@ -206,15 +206,16 @@
     <Compile Include="IconFonts\TypiconsModule.cs" />
     <Compile Include="IconFonts\WeatherIconsModule.cs" />
     <Compile Include="Loggers\AppCenterLogger.cs" />
-    <Compile Include="Networking\WiFiNetwork.cs" />
     <Compile Include="Networking\NetworkBase.cs" />
-    <Compile Include="Networking\WiFiNetworks.cs" />
+    <Compile Include="Networking\WiFiAdaptersService.cs" />
+    <Compile Include="Networking\WiFiNetworksService.cs" />
     <Compile Include="Networking\WiredNetworks.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\BindingHelper.cs" />
     <Compile Include="Services\ClipBoard.cs" />
     <Compile Include="Services\DeviceManager.cs" />
     <Compile Include="Services\DirectoryServices.cs" />
+    <Compile Include="Services\GeoLocator.cs" />
     <Compile Include="Services\RestMessageHandler.cs" />
     <Compile Include="Services\SecureStorage.cs" />
     <Compile Include="Services\SerialPort.cs" />
@@ -248,28 +249,28 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="LagoVista.Core">
-      <Version>2.1.713-beta1441</Version>
+      <Version>2.1.907-beta0754</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.Authentication">
-      <Version>2.1.713-beta1441</Version>
+      <Version>2.1.907-beta0754</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.Networking">
-      <Version>2.1.713-beta1441</Version>
+      <Version>2.1.907-beta0754</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.IoT.Logging">
-      <Version>2.1.713-beta1441</Version>
+      <Version>2.1.906-beta0929</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.UserAdmin.Models">
-      <Version>2.1.713-beta1441</Version>
+      <Version>2.1.906-beta0929</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>6.2.8</Version>
+      <Version>6.2.9</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
-      <Version>12.0.2</Version>
+      <Version>12.0.3</Version>
     </PackageReference>
     <PackageReference Include="Win2D.uwp">
-      <Version>1.23.0</Version>
+      <Version>1.24.0</Version>
     </PackageReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
