--- a/src/LagoVista.XPlat.Core/LagoVista.XPlat.Core.csproj
+++ b/src/LagoVista.XPlat.Core/LagoVista.XPlat.Core.csproj
@@ -8,18 +8,18 @@
     <None Remove="Package.nuspec" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="LagoVista.Core.Authentication" Version="2.1.907-beta0754" />
-    <PackageReference Include="LagoVista.Core.Networking" Version="2.1.907-beta0754" />
-    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.906-beta0929" />
-    <PackageReference Include="LagoVista.UserAdmin.Models" Version="2.1.906-beta0929" />
-    <PackageReference Include="Microsoft.AppCenter" Version="2.5.0" />
-    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="2.5.0" />
-    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="2.5.0" />
-    <PackageReference Include="Microsoft.AppCenter.Distribute" Version="2.5.0" />
-    <PackageReference Include="Microsoft.AppCenter.Push" Version="2.5.0" />
+    <PackageReference Include="LagoVista.Core.Authentication" Version="2.1.1064-beta1512" />
+    <PackageReference Include="LagoVista.Core.Networking" Version="2.1.1064-beta1512" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.1064-beta1512" />
+    <PackageReference Include="LagoVista.UserAdmin.Models" Version="2.1.1064-beta1512" />
+    <PackageReference Include="Microsoft.AppCenter" Version="3.1.0" />
+    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="3.1.0" />
+    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="3.1.0" />
+    <PackageReference Include="Microsoft.AppCenter.Distribute" Version="3.1.0" />
+    <PackageReference Include="Microsoft.NETCore.Platforms" Version="2.2.4" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="Xamarin.Forms" Version="4.2.0.778463" />
-    <PackageReference Include="LagoVista.Core" Version="2.1.907-beta0754" />
+    <PackageReference Include="Xamarin.Forms" Version="4.2.0.910310" />
+    <PackageReference Include="LagoVista.Core" Version="2.1.1064-beta1512" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LagoVista.Client.Core\LagoVista.Client.Core.csproj" />
