--- a/src/LagoVista.XPlat.iOS/packages.config
+++ b/src/LagoVista.XPlat.iOS/packages.config
@@ -1,68 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="LagoVista.Core" version="2.1.907-beta0754" targetFramework="xamarinios10" />
-  <package id="LagoVista.Core.Authentication" version="2.1.907-beta0754" targetFramework="xamarinios10" />
-  <package id="LagoVista.Core.Networking" version="2.1.907-beta0754" targetFramework="xamarinios10" />
-  <package id="LagoVista.IoT.Logging" version="2.1.906-beta0929" targetFramework="xamarinios10" />
-  <package id="LagoVista.UserAdmin.Models" version="2.1.906-beta0929" targetFramework="xamarinios10" />
-  <package id="Microsoft.AppCenter" version="2.5.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.AppCenter.Analytics" version="2.5.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.AppCenter.Crashes" version="2.5.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.AppCenter.Distribute" version="2.5.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.AppCenter.Push" version="2.5.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.CSharp" version="4.7.0-preview2.19523.17" targetFramework="xamarinios10" />
-  <package id="Microsoft.NETCore.Platforms" version="3.1.0-preview2.19523.17" targetFramework="xamarinios10" />
-  <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="LagoVista.Core" version="2.1.1064-beta1512" targetFramework="xamarinios10" />
+  <package id="LagoVista.Core.Authentication" version="2.1.1064-beta1512" targetFramework="xamarinios10" />
+  <package id="LagoVista.Core.Networking" version="2.1.1064-beta1512" targetFramework="xamarinios10" />
+  <package id="LagoVista.IoT.Logging" version="2.1.1064-beta1512" targetFramework="xamarinios10" />
+  <package id="LagoVista.UserAdmin.Models" version="2.1.1064-beta1512" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter" version="3.1.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter.Analytics" version="3.1.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter.Crashes" version="3.1.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter.Distribute" version="3.1.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.NETCore.Platforms" version="2.2.4" targetFramework="xamarinios10" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="xamarinios10" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="xamarinios10" />
   <package id="Square.SocketRocket" version="0.5.1.1" targetFramework="xamarinios10" />
-  <package id="System.AppContext" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Collections" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Console" version="4.3.1" targetFramework="xamarinios10" />
-  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Globalization" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.IO" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.IO.Compression" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.IO.FileSystem" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Linq" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Net.Http" version="4.3.4" targetFramework="xamarinios10" />
-  <package id="System.Net.Primitives" version="4.3.1" targetFramework="xamarinios10" />
-  <package id="System.Net.Sockets" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Net.WebSockets.Client" version="4.3.2" targetFramework="xamarinios10" />
-  <package id="System.ObjectModel" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Reflection" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Runtime" version="4.3.1" targetFramework="xamarinios10" />
-  <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="xamarinios10" />
-  <package id="System.Runtime.Handles" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Runtime.Serialization.Formatters" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="xamarinios10" />
-  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="xamarinios10" />
-  <package id="System.Text.Encoding" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="xamarinios10" />
-  <package id="System.Threading" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Threading.Tasks" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Threading.Timer" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="xamarinios10" />
-  <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="4.2.0.778463" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="4.2.0.910310" targetFramework="xamarinios10" />
 </packages>
