--- a/src/LagoVista.Client.Core/LagoVista.Client.Core.csproj
+++ b/src/LagoVista.Client.Core/LagoVista.Client.Core.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <VersionPrefix>1.2</VersionPrefix>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -20,16 +20,16 @@
     <Content Include="Icons\ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="LagoVista.Core" Version="2.1.1064-beta1512" />
-    <PackageReference Include="LagoVista.Core.Authentication" Version="2.1.1064-beta1512" />
-    <PackageReference Include="LagoVista.Core.Networking" Version="2.1.1064-beta1512" />
-    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.1064-beta1512" />
-    <PackageReference Include="LagoVista.UserAdmin.Models" Version="2.1.1064-beta1512" />
-    <PackageReference Include="Microsoft.AppCenter" Version="3.1.0" />
-    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="3.1.0" />
-    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="3.1.0" />
-    <PackageReference Include="Microsoft.AppCenter.Distribute" Version="3.1.0" />
-    <PackageReference Include="Microsoft.AppCenter.Push" Version="3.1.0" />
+    <PackageReference Include="LagoVista.Core" Version="2.1.1142-beta1228" />
+    <PackageReference Include="LagoVista.Core.Authentication" Version="2.1.1142-beta1228" />
+    <PackageReference Include="LagoVista.Core.Networking" Version="2.1.1142-beta1228" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.1142-beta1228" />
+    <PackageReference Include="LagoVista.UserAdmin.Models" Version="2.1.1142-beta1228" />
+    <PackageReference Include="Microsoft.AppCenter" Version="3.2.2" />
+    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="3.2.2" />
+    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="3.2.2" />
+    <PackageReference Include="Microsoft.AppCenter.Distribute" Version="3.2.2" />
+    <PackageReference Include="Microsoft.AppCenter.Push" Version="3.2.2" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
   <ItemGroup>
