--- a/src/LagoVista.Client.Devices/LagoVista.Client.Devices.csproj
+++ b/src/LagoVista.Client.Devices/LagoVista.Client.Devices.csproj
@@ -1,19 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <NetStandardImplicitPackageVersion>2.0.3</NetStandardImplicitPackageVersion>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="LagoVista.Core" Version="2.1.1064-beta1512" />
-    <PackageReference Include="LagoVista.IoT.Deployment.Models" Version="2.1.1064-beta1512" />
-    <PackageReference Include="LagoVista.IoT.DeviceAdmin.Models" Version="2.1.1064-beta1512" />
-    <PackageReference Include="LagoVista.IoT.DeviceManagement.Models" Version="2.1.1064-beta1512" />
+    <PackageReference Include="LagoVista.Core" Version="2.1.1142-beta1228" />
+    <PackageReference Include="LagoVista.IoT.Deployment.Models" Version="2.1.1142-beta1228" />
+    <PackageReference Include="LagoVista.IoT.DeviceAdmin.Models" Version="2.1.1142-beta1228" />
+    <PackageReference Include="LagoVista.IoT.DeviceManagement.Models" Version="2.1.1142-beta1228" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\LagoVista.Client.Core\LagoVista.Client.Core.csproj" />
   </ItemGroup>
-
 </Project>
