--- a/src/LagoVista.XPlat.Core/LagoVista.XPlat.Core.csproj
+++ b/src/LagoVista.XPlat.Core/LagoVista.XPlat.Core.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <NetStandardImplicitPackageVersion>2.0.3</NetStandardImplicitPackageVersion>
@@ -8,18 +8,18 @@
     <None Remove="Package.nuspec" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="LagoVista.Core.Authentication" Version="2.1.1064-beta1512" />
-    <PackageReference Include="LagoVista.Core.Networking" Version="2.1.1064-beta1512" />
-    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.1064-beta1512" />
-    <PackageReference Include="LagoVista.UserAdmin.Models" Version="2.1.1064-beta1512" />
-    <PackageReference Include="Microsoft.AppCenter" Version="3.1.0" />
-    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="3.1.0" />
-    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="3.1.0" />
-    <PackageReference Include="Microsoft.AppCenter.Distribute" Version="3.1.0" />
+    <PackageReference Include="LagoVista.Core.Authentication" Version="2.1.1142-beta1228" />
+    <PackageReference Include="LagoVista.Core.Networking" Version="2.1.1142-beta1228" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.1142-beta1228" />
+    <PackageReference Include="LagoVista.UserAdmin.Models" Version="2.1.1142-beta1228" />
+    <PackageReference Include="Microsoft.AppCenter" Version="3.2.2" />
+    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="3.2.2" />
+    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="3.2.2" />
+    <PackageReference Include="Microsoft.AppCenter.Distribute" Version="3.2.2" />
     <PackageReference Include="Microsoft.NETCore.Platforms" Version="2.2.4" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="Xamarin.Forms" Version="4.2.0.910310" />
-    <PackageReference Include="LagoVista.Core" Version="2.1.1064-beta1512" />
+    <PackageReference Include="Xamarin.Forms" Version="4.7.0.1080" />
+    <PackageReference Include="LagoVista.Core" Version="2.1.1142-beta1228" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LagoVista.Client.Core\LagoVista.Client.Core.csproj" />
