--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.csproj
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.csproj
@@ -33,6 +33,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Update="BTSerialView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="FullScreenPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
