--- a/src/LagoVista.Core.UWP/LagoVista.Core.UWP.csproj
+++ b/src/LagoVista.Core.UWP/LagoVista.Core.UWP.csproj
@@ -212,6 +212,7 @@
     <Compile Include="Networking\WiredNetworks.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\BindingHelper.cs" />
+    <Compile Include="Services\BluetoothSerial.cs" />
     <Compile Include="Services\ClipBoard.cs" />
     <Compile Include="Services\DeviceManager.cs" />
     <Compile Include="Services\DirectoryServices.cs" />
