--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.iOS/Info.plist
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.iOS/Info.plist
@@ -28,54 +28,40 @@
 	<string>com.software-logistics.xplatsample</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
-  <key>UIAppFonts</key>
-  <array>
-    <string>Fonts/iconize-entypoplus.ttf</string>
-    <string>Fonts/iconize-fontawesome.ttf</string>
-    <string>Fonts/iconize-ionicons.ttf</string>
-    <string>Fonts/iconize-material.ttf</string>
-    <string>Fonts/iconize-meteocons.ttf</string>
-    <string>Fonts/iconize-simplelineicons.ttf</string>
-    <string>Fonts/iconize-typicons.ttf</string>
-    <string>Fonts/iconize-weathericons.ttf</string>
-    <string>Fonts/Roboto-Black.ttf</string>
-    <string>Fonts/Roboto-BlackItalic.ttf</string>
-    <string>Fonts/Roboto-Bold.ttf</string>
-    <string>Fonts/Roboto-BoldItalic.ttf</string>
-    <string>Fonts/Roboto-Italic.ttf</string>
-    <string>Fonts/Roboto-Light.ttf</string>
-    <string>Fonts/Roboto-LightItalic.ttf</string>
-    <string>Fonts/Roboto-Medium.ttf</string>
-    <string>Fonts/Roboto-MediumItalic.ttf</string>
-    <string>Fonts/Roboto-Regular.ttf</string>
-    <string>Fonts/Roboto-Thin.ttf</string>
-    <string>Fonts/Roboto-ThinItalic.ttf</string>
-    <string>Fonts/RobotoCondensed-Bold.ttf</string>
-    <string>Fonts/RobotoCondensed-BoldItalic.ttf</string>
-    <string>Fonts/RobotoCondensed-Italic.ttf</string>
-    <string>Fonts/RobotoCondensed-Light.ttf</string>
-    <string>Fonts/RobotoCondensed-LightItalic.ttf</string>
-    <string>Fonts/RobotoCondensed-Regular.ttf</string>
-  </array>
-  <key>CFBundleIconFiles</key>
+	<key>UIAppFonts</key>
 	<array>
-		<string>Icon-60@2x</string>
-		<string>Icon-60@3x</string>
-		<string>Icon-76</string>
-		<string>Icon-76@2x</string>
-		<string>Default</string>
-		<string>Default@2x</string>
-		<string>Default-568h@2x</string>
-		<string>Default-Portrait</string>
-		<string>Default-Portrait@2x</string>
-		<string>Icon-Small-40</string>
-		<string>Icon-Small-40@2x</string>
-		<string>Icon-Small-40@3x</string>
-		<string>Icon-Small</string>
-		<string>Icon-Small@2x</string>
-		<string>Icon-Small@3x</string>
+		<string>Fonts/iconize-entypoplus.ttf</string>
+		<string>Fonts/iconize-fontawesome.ttf</string>
+		<string>Fonts/iconize-ionicons.ttf</string>
+		<string>Fonts/iconize-material.ttf</string>
+		<string>Fonts/iconize-meteocons.ttf</string>
+		<string>Fonts/iconize-simplelineicons.ttf</string>
+		<string>Fonts/iconize-typicons.ttf</string>
+		<string>Fonts/iconize-weathericons.ttf</string>
+		<string>Fonts/Roboto-Black.ttf</string>
+		<string>Fonts/Roboto-BlackItalic.ttf</string>
+		<string>Fonts/Roboto-Bold.ttf</string>
+		<string>Fonts/Roboto-BoldItalic.ttf</string>
+		<string>Fonts/Roboto-Italic.ttf</string>
+		<string>Fonts/Roboto-Light.ttf</string>
+		<string>Fonts/Roboto-LightItalic.ttf</string>
+		<string>Fonts/Roboto-Medium.ttf</string>
+		<string>Fonts/Roboto-MediumItalic.ttf</string>
+		<string>Fonts/Roboto-Regular.ttf</string>
+		<string>Fonts/Roboto-Thin.ttf</string>
+		<string>Fonts/Roboto-ThinItalic.ttf</string>
+		<string>Fonts/RobotoCondensed-Bold.ttf</string>
+		<string>Fonts/RobotoCondensed-BoldItalic.ttf</string>
+		<string>Fonts/RobotoCondensed-Italic.ttf</string>
+		<string>Fonts/RobotoCondensed-Light.ttf</string>
+		<string>Fonts/RobotoCondensed-LightItalic.ttf</string>
+		<string>Fonts/RobotoCondensed-Regular.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>XSAppIconAssets</key>
+	<string>Assets.xcassets/AppIcon.appiconset</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>Test BlueTooth Functionality</string>
 </dict>
 </plist>
