--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.iOS/packages.config
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.iOS/packages.config
@@ -1,12 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="LagoVista.Core" version="2.1.740-beta0913" targetFramework="xamarinios10" />
-  <package id="LagoVista.Core.Authentication" version="2.1.740-beta0913" targetFramework="xamarinios10" />
-  <package id="LagoVista.Core.Networking" version="2.1.740-beta0913" targetFramework="xamarinios10" />
-  <package id="LagoVista.IoT.Logging" version="2.1.740-beta0913" targetFramework="xamarinios10" />
-  <package id="LagoVista.UserAdmin.Models" version="2.1.740-beta0913" targetFramework="xamarinios10" />
+  <package id="LagoVista.Core" version="2.1.1142-beta1228" targetFramework="xamarinios10" />
+  <package id="LagoVista.Core.Authentication" version="2.1.1142-beta1228" targetFramework="xamarinios10" />
+  <package id="LagoVista.Core.Networking" version="2.1.1142-beta1228" targetFramework="xamarinios10" />
+  <package id="LagoVista.IoT.Logging" version="2.1.1142-beta1228" targetFramework="xamarinios10" />
+  <package id="LagoVista.UserAdmin.Models" version="2.1.1142-beta1228" targetFramework="xamarinios10" />
+   <package id="Microsoft.AppCenter" version="3.4.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter.Analytics" version="3.4.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter.Crashes" version="3.4.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter.Distribute" version="3.4.0" targetFramework="xamarinios10" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="xamarinios10" />
-  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="xamarinios10" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="xamarinios10" />
   <package id="System.Collections" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="xamarinios10" />
@@ -32,5 +36,5 @@
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="xamarinios10" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="4.0.0.425677" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="4.8.0.1269" targetFramework="xamarinios10" />
 </packages>
