--- a/src/LagoVista.Core.UWP/LagoVista.Core.UWP.csproj
+++ b/src/LagoVista.Core.UWP/LagoVista.Core.UWP.csproj
@@ -211,9 +211,11 @@
     <Compile Include="Networking\WiFiNetworksService.cs" />
     <Compile Include="Networking\WiredNetworks.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AppServices.cs" />
     <Compile Include="Services\BindingHelper.cs" />
     <Compile Include="Services\BluetoothSerial.cs" />
     <Compile Include="Services\ClipBoard.cs" />
+    <Compile Include="Services\ProcessOutputWriter.cs" />
     <Compile Include="Services\DeviceManager.cs" />
     <Compile Include="Services\DirectoryServices.cs" />
     <Compile Include="Services\GeoLocator.cs" />
