android BT Serial

--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.Droid/LagoVista.XPlat.Sample.Droid.csproj
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.Droid/LagoVista.XPlat.Sample.Droid.csproj
@@ -79,10 +79,35 @@
     <Compile Include="Services\ClipBoard.cs" />
     <Compile Include="Services\DispatcherServices.cs" />
     <Compile Include="Services\NetworkService.cs" />
+    <Compile Include="Services\ProcessWriter.cs" />
     <Compile Include="Services\SecureStorage.cs" />
+    <Compile Include="Services\SerialPort.cs" />
     <Compile Include="Services\StorageService.cs" />
     <Compile Include="Services\TCPClient.cs" />
     <Compile Include="Services\UDPClient.cs" />
+    <Compile Include="Services\UsbSerialOTG\driver\CdcAcmSerialDriver.cs" />
+    <Compile Include="Services\UsbSerialOTG\driver\Ch34xSerialDriver.cs" />
+    <Compile Include="Services\UsbSerialOTG\driver\CommonUsbSerialPort.cs" />
+    <Compile Include="Services\UsbSerialOTG\driver\Cp21xxSerialDriver.cs" />
+    <Compile Include="Services\UsbSerialOTG\driver\FtdiSerialDriver.cs" />
+    <Compile Include="Services\UsbSerialOTG\driver\Parity.cs" />
+    <Compile Include="Services\UsbSerialOTG\driver\ProbeTable.cs" />
+    <Compile Include="Services\UsbSerialOTG\driver\ProlificSerialDriver.cs" />
+    <Compile Include="Services\UsbSerialOTG\driver\STM32SerialDriver.cs" />
+    <Compile Include="Services\UsbSerialOTG\driver\UsbId.cs" />
+    <Compile Include="Services\UsbSerialOTG\driver\UsbSerialDriver.cs" />
+    <Compile Include="Services\UsbSerialOTG\driver\UsbSerialPort.cs" />
+    <Compile Include="Services\UsbSerialOTG\driver\UsbSerialProber.cs" />
+    <Compile Include="Services\UsbSerialOTG\driver\UsbSerialRuntimeException.cs" />
+    <Compile Include="Services\UsbSerialOTG\driver\UsbSupport.cs" />
+    <Compile Include="Services\UsbSerialOTG\Extensions\AsyncExtensions.cs" />
+    <Compile Include="Services\UsbSerialOTG\Extensions\BufferExtensions.cs" />
+    <Compile Include="Services\UsbSerialOTG\Extensions\EventHandlerExtensions.cs" />
+    <Compile Include="Services\UsbSerialOTG\Extensions\SerialDataReceivedArgs.cs" />
+    <Compile Include="Services\UsbSerialOTG\Extensions\SerialInputOutputManager.cs" />
+    <Compile Include="Services\UsbSerialOTG\Extensions\UsbManagerExtensions.cs" />
+    <Compile Include="Services\UsbSerialOTG\Extensions\UsbSerialPortInfo.cs" />
+    <Compile Include="Services\UsbSerialOTG\Util\HexDump.cs" />
     <Compile Include="Services\WebSocket.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
